# Info-2021_BeagleBone_Black

./: .gitignore  .gitmodules  README.md
Cerveau/: Makefile  _nodes_engine.py  cleaner.py  start.py  starter.py  stop.py
Cerveau/Automatisme/Pathfinder/include/pathfinder/: map_storage.h  pathfinder.h  pos_convertor.h
Cerveau/Automatisme/Pathfinder/source/: map_storage.cpp  pathfinder.cpp  pathfinder_node.cpp  pos_convertor.cpp
Cerveau/Interfaces/can_interface/data/: devices.xml  frames.xml  messages.xml
Cerveau/Interfaces/can_interface/include/: __init__.py  can_handler.py  devices.py  frames.py  param.py
Cerveau/Interfaces/can_interface/src/: can_comm.py
Cerveau/engine_base/: node_base.py
Cerveau/events/: can_events.py  test_events.py
Cerveau/interface/can_interface/: can_cli.py
Cerveau/interface/can_interface/data/: devices.json  frames.json  frames_old.json  framesshort.json  messages.json
Cerveau/interface/can_interface/include/: can_handler.py  devices.py  frames.py  param.py
Cerveau/interface/can_interface/src/: can_cli.py  can_comm.py  can_test.py
Cerveau/interfaces/can_interface/: can_cli.py  can_handler.py
Cerveau/node_manager/: event.py  event_handler.py  node_manager.py
Cerveau/nodes/: can_node.py  test_node.py
Cerveau/test/: start.py
Cerveau/test/packA/: a2.py
Cerveau/test/packA/subA/: sa2.py
Scripts/: launch_deployment.sh  launch_test.sh
brain/: _nodes_engine.py  cleaner.py  logger.py  start.py  stop.py  strategy.py  test.py
brain/Tests/: test.py
brain/actions/: action_actuator.py  action_bbb_gpio.py  action_goto.py  action_misc.py
brain/engine_base/: action_base.py  event_base.py  node_base.py
brain/events/: actuator_events.py  bbb_gpio_events.py  can_events.py  sonar_events.py  stm32_events.py  test_events.py
brain/interfaces/can_interface/: can_cli.py  can_handler.py
brain/nodes/: action_node.py  actuator_node.py  bbb_gpio_node.py  can_node.py  ipython_node.py  sonar_node.py  stm32_node.py  test_node.py
doc/: BeagleBoneBlack_2021.one  Notes_exploration.one
lib/args_lib/: CMakeLists.txt  package.xml  setup.py
lib/args_lib/include/: argumentable.py
lib/args_lib/include/args_lib/: Argumentable.hpp
lib/args_lib/src/: Argumentable.cpp
lib/xml_class_parser/: CMakeLists.txt  package.xml  setup.py
lib/xml_class_parser/include/xml_class_parser/: __init__.py  bind.py  context.py  helper.py  parsable.py  parsing_exception.py  types.py
lib/xml_class_parser/test/: classes.py  test-parsable.launch  test_behavior.py  test_binding.py  test_errors.py  test_helpers.py
script/: .bashrc  .canrc  test_can_handler.py  test_can_interface.sh
