<?xml version="1.0"?>
<package format="2">
  <name>args_lib</name>
  <version>0.0.0</version>
  <description>Package providing utility functions for whole project</description>

  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>std_msgs</depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
